# nest-support

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
claude-skills/data-quality-agent/: SKILL.md
claude-skills/wamnet-provider-sync/: .gitignore  SKILL.md  pyproject.toml
claude-skills/wamnet-provider-sync/config/: prefectures.json  service_types.json
claude-skills/wamnet-provider-sync/data/: README.md
claude-skills/wamnet-provider-sync/scripts/: detect_changes.py  download_wamnet.py  generate_report.py  sync_providers.py
configs/: claude_desktop_config.json
docs/: ADVANCED_USAGE.md  DISTRIBUTION_PLAN.md  EXTRACTION_PROMPT.md  FAQ.md  FIRST_5_OPERATIONS.md  PRIVACY_GUIDELINES.md  QUICK_START.md  SCHEMA_CONVENTION.md  SETUP_GUIDE.md  VIDEO_SCRIPTS.md  VOICE_RECORDING_GUIDE.md
field-ui/: server.py
field-ui/static/: index.html  (+4 more)
installer/: configure-claude.ps1  configure-claude.sh  demo-data.cypher  install-mac.sh  install-windows.ps1  load-demo-data.ps1  load-demo-data.sh  simulation-emotion-data.cypher
lib/: __init__.py  db_new_operations.py  db_operations.py  embedding.py  file_readers.py  insight_engine.py  pseudonymizer.py  schema_validator.py  utils.py
manifesto/: MANIFESTO.md
scripts/: backfill_embeddings.py  backup.sh  check_weight_consistency.py  doctor.sh  migrate_pseudonymization.py  migrate_schema_v2.py  multi_importer.py
sos/: .env.example  README.md  api_server.py
tests/: test_insight_engine.py  test_pseudonymizer.py  test_schema_validator.py  test_simulation_scenario.py
(+40 files in other folders)
