[project]
name = "nest-support"
version = "1.0.0"
description = "Claude-Native 親亡き後支援データベース - Skills + Neo4j MCP"
readme = "docs/QUICK_START.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "pykakasi>=2.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
]
