[project]
name = "wamnet-provider-sync"
version = "1.0.0"
description = "WAM NET障害福祉サービス事業所データをNeo4jに同期するツール"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
